Fix shift template css

--- a/src/shiftings/static/css/base.css
+++ b/src/shiftings/static/css/base.css
@@ -49,12 +49,6 @@
   --bs-menu-bg: #0b0c0e;
 }
 
-footer {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 10px;
-}
-
 input, textarea, select, .form-control, .form-select {
   background-color: transparent !important;
   color: var(--bs-body-color) !important;
